Fixing unit tests, dashboard a bit